# wrac-plugin-template

./: .gitignore  README.md  README_JA.md
.github/workflows/: ci.yml  smoke-test.yml
clap_wrapper_builder/: CMakeLists.txt  README.md  build_wrapper_plugin.sh  build_wrapper_plugin_static.sh
crates/run_loop_timer/src/: lib.rs
crates/wrac_clap_adapter/: README.md
crates/wrac_clap_adapter/src/: abi.rs  api.rs  clap.rs  core.rs  descriptor.rs  events.rs  host_gui.rs  lib.rs  params.rs  process_buffer.rs
crates/wrac_clap_adapter/src/abi/: audio_buffers.rs  audio_ports.rs  configurable_audio_ports.rs  ffi.rs  gui_extension.rs  note_ports.rs  params_extension.rs  state_extension.rs
crates/wrac_clap_adapter/src/clap/: params_extension.rs
crates/wrac_wxp_gui/: Cargo.toml  README.md
crates/wrac_wxp_gui/src/: controller.rs  dpi.rs  lib.rs  runtime.rs  window.rs
docs/: setup.md  setup_JA.md
script/: build.sh  build_and_install.sh  build_standalone.sh  build_wrapper.sh  install.sh  uninstall.sh
src-gui/: index.html  package-lock.json  package.json  vite.config.ts
src-gui/src/: main.ts  style.css
src-plugin/: Cargo.toml  README.md  build.rs
src-plugin/src/: audio.rs  commands.rs  gui.rs  lib.rs  logging.rs  plugin.rs  state.rs
src-plugin/src/commands/: resize.rs
src-plugin/src/gui/: notifier.rs  runtime.rs
src-plugin/src/plugin/: audio_ports.rs  parameters.rs  state_support.rs
xtask/: README.md
xtask/src/: cli.rs  commands.rs  context.rs  main.rs  targets.rs  util.rs
