[package]
name = "wrac_gain_plugin"
version = "0.1.0"
edition = "2024"
description = "Example gain plugin for the WRAC plugin template"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
publish = false
build = "build.rs"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", rev = "d31f2d5f550ce339d1c2f0c1ab7da951224b20df", features = ["backtrace"] }
atomic_float = "1.1.0"
log = "0.4"
novonotes_run_loop = { git = "https://github.com/novonotes/run_loop.git", rev = "2779a6400cc99a8728052ba4df1c475a492849de" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
run_loop_timer = { path = "../crates/run_loop_timer" }
wrac_clap_adapter = { path = "../crates/wrac_clap_adapter" }
wrac_wxp_gui = { path = "../crates/wrac_wxp_gui" }
wxp = { git = "https://github.com/novonotes/wxp.git", branch = "main" }

[lints.rust]
unreachable_pub = "deny"

[build-dependencies]
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
