[package]
name = "wrac_wxp_gui"
version = "0.1.0"
edition = "2024"
description = "wxp GUI helper for the WRAC plugin template"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
readme = "README.md"
publish = false

[dependencies]
log = "0.4"
novonotes_run_loop = { git = "https://github.com/novonotes/run_loop.git", rev = "2779a6400cc99a8728052ba4df1c475a492849de" }
parking_lot = "0.12"
raw-window-handle = "0.6"
wrac_clap_adapter = { path = "../wrac_clap_adapter" }
wxp = { git = "https://github.com/novonotes/wxp.git", branch = "main" }

[lints.rust]
unreachable_pub = "deny"
